# Rocky

./: .codeclimate.yml  .gitignore  .netrc  .travis.yml  CMakeLists.txt  README.md  events.go  game.go  geometry.go  glfw.go  layout.go  pixmap.go  shader.go  texture.go  widget.go  widgets.go  window.go  window_test.go
core/: CMakeLists.txt  Game.cpp  Game.h  game.go
geometry/: geometry.go
layouts/: horizontal.go  layout.go  vertical.go
opengl/: texture.go
opengl/gl33/: init.go  shader.go  texture.go  version.go  viewport.go
src/: game.go
src/core/game/: game.go
widgets/: boxlayouts.go  layout.go  pixmap.go  widget.go
widgets/basic/: widget.go
widgets/gl33/: pixmap.go  widget.go
window/: glfw.go  glfw_test.go  opengl.go  window.go  window_test.go
window/base/: window.go
window/basic/: window.go
window/glfw/: glfw.go  glfw_test.go  opengl.go  window.go  window_test.go
window/state/: state.go
